# MCP

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_google_auth.py  start.ps1
.claude/: settings.local.json
agents/: base_agent.py  executor_agent.py  meeting_resolver.py  observer_agent.py  planner_agent.py
api/: app.py  dashboard.py  ws.py
api/routers/: approvals.py  events.py  health.py  metrics.py  preferences.py  twilio.py  voice.py
api/static/: app.js  dashboard.html  style.css
config/: settings.py
core/: bootstrap.py
docs/: ARCHITECTURE.md  PersonalOS_Agent_Presentation.pptx  hackathon_demo.html
mcp_server/: calendar_tools.py  filesystem_tools.py  gmail_tools.py  google_auth.py  server.py
memory/: chroma_memory.py  redis_client.py
scripts/: build_ppt.py  check.py  demo_call.py  pipeline_runner.py  start.ps1  test_voice_email.py
tests/: conftest.py  seed_dashboard.py  seed_events.py  test_backend.py  test_pipeline.py
tests/fixtures/: seed_events.py
utils/: logger.py  notifier.py
