[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "personal-os-agent"
version = "1.3.0"
description = "Autonomous multi-agent AI system — Gmail, Calendar, Filesystem via MCP"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "mcp>=1.6.0",
  "openai>=1.30.0",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
  "google-auth-httplib2>=0.2.0",
  "google-api-python-client>=2.131.0",
  "redis[asyncio]>=5.0.3",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "twilio>=9.1.0",
  "structlog>=24.2.0",
  "colorama>=0.4.6",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "unit: Pure unit tests — no running system required",
  "integration: Integration tests — requires python main.py on ports 8000+8080",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scripts*", "docs*"]
